[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/inv/ItemList.gd" type="Script" id=1]
[ext_resource path="res://textures/theme/inventory.tres" type="Theme" id=2]

[node name="ItemList" type="ItemList"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="." to="." method="_on_ItemList_item_selected"]
[connection signal="mouse_entered" from="." to="." method="_on_ItemList_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ItemList_mouse_exited"]
